# cpu-rust

./: .gitignore  AGENTS.md  Cargo.toml
crates/6502/bus/: Cargo.toml
crates/6502/bus/src/: lib.rs
crates/6502/config/: Cargo.toml
crates/6502/config/src/: lib.rs
crates/6502/config/src/tests/: lib.rs
crates/6502/core/: Cargo.toml
crates/6502/core/src/: cpu.rs  instruction.rs  lib.rs
crates/6502/core/src/tests/: cpu.rs  instruction.rs  lib.rs
crates/6502/core/tests/: apple1_basic.rs  integration.rs
crates/6502/core/tests/roms/apple-1/: README.md  WOZ_Monitor_Source.txt
crates/6502/memory/: Cargo.toml
crates/6502/memory/src/: lib.rs
crates/6502/memory/src/tests/: lib.rs
crates/chips/acia-6551/: Cargo.toml
crates/chips/acia-6551/src/: lib.rs
crates/chips/acia-6551/src/tests/: lib.rs
crates/chips/pia-6520/: Cargo.toml  build.sh
crates/chips/pia-6520/src/: lib.rs  reg.rs
crates/chips/pia-6520/src/tests/: lib.rs
crates/chips/via-6522/: Cargo.toml  build.sh
crates/chips/via-6522/src/: lib.rs  reg.rs
crates/chips/via-6522/src/tests/: lib.rs
crates/cpu/bus/: Cargo.toml
crates/cpu/chip8/: Cargo.toml
crates/cpu/chip8/src/: cpu.rs  instruction.rs  lib.rs
crates/cpu/chip8/src/tests/: cpu.rs  instruction.rs
crates/cpu/display/: Cargo.toml
crates/cpu/display/src/: lib.rs
crates/cpu/display/src/tests/: lib.rs
crates/cpu/keyboard/: Cargo.toml
crates/cpu/keyboard/src/: lib.rs
crates/cpu/keyboard/src/tests/: lib.rs
crates/cpu/machine/: Cargo.toml
crates/cpu/machine/src/: lib.rs
crates/cpu/memory/: Cargo.toml
crates/cpu/memory/src/: lib.rs
crates/cpu/memory/src/tests/: lib.rs
crates/cpu/segment/: Cargo.toml
crates/cpu/segment/src/: lib.rs
crates/machines/apple1/: Cargo.toml  README.md
crates/machines/apple1/src/: lib.rs
crates/machines/apple1/src/tests/: lib.rs
crates/machines/chip8/: Cargo.toml  README.md
crates/machines/chip8/src/: config.rs  lib.rs  memory.rs
crates/machines/chip8/src/tests/: config.rs  lib.rs  memory.rs
crates/machines/eater-6502/: Cargo.toml  README.md
crates/machines/eater-6502/src/: lib.rs  rom.rs
crates/machines/eater-6502/src/tests/: lib.rs
crates/machines/kim1/: Cargo.toml  README.md
crates/machines/kim1/src/: lib.rs
crates/machines/kim1/src/tests/: lib.rs
crates/machines/kim1/tests/: ledtest.rs
crates/machines/pet/: Cargo.toml  README.md
crates/machines/pet/src/: lib.rs
crates/other/chip8/: Cargo.toml  build.sh
crates/other/chip8/src/: config.rs  cpu.rs  display.rs  instruction.rs  keyboard.rs  lib.rs  memory.rs
crates/other/chip8/wasm/: chip8_core.d.ts  chip8_core.js  chip8_core_bg.wasm  chip8_core_bg.wasm.d.ts
crates/other/z80/: Cargo.toml  build.sh
crates/other/z80/src/: lib.rs
crates/other/z80/wasm/: z80_core.d.ts  z80_core.js  z80_core_bg.wasm  z80_core_bg.wasm.d.ts
crates/tools/apple1-term/: Cargo.toml
crates/tools/apple1-term/src/: main.rs
crates/tools/apple1-window/: Cargo.toml
crates/tools/apple1-window/src/: main.rs
crates/tools/chip8-romtest/: Cargo.toml
crates/tools/chip8-romtest/src/: main.rs
crates/tools/chip8-term/: Cargo.toml
crates/tools/chip8-term/src/: main.rs
crates/tools/kim1-term/: Cargo.toml  README.md
crates/tools/kim1-term/examples/: kim1.cfg  ledtest.s  test_runner.rs
crates/tools/kim1-term/src/: main.rs
crates/tools/pet-term/: Cargo.toml
crates/tools/pet-term/src/: main.rs
crates/tools/pet-window/: Cargo.toml
crates/tools/pet-window/src/: main.rs
crates/tools/serial-term/: Cargo.toml
crates/tools/serial-term/src/: main.rs
docs/: bugfixes-pet-display-input.md
docs/6502/: TODO.md  checklist.md  illegal-opcodes.md  references.md
docs/chips/: acia-6551-binary-compat-plan.md  pia-6520-binary-compat-plan.md  via-6522-binary-compat-plan.md
