[workspace]
resolver = "2"
members = [
    "crates/cpu/bus",
    "crates/cpu/chip8",
    "crates/cpu/display",
    "crates/cpu/keyboard",
    "crates/cpu/machine",
    "crates/cpu/memory",
    "crates/cpu/segment",
    "crates/6502/config",
    "crates/6502/core",
    "crates/6502/memory",
    "crates/machines/apple1",
    "crates/machines/chip8",
    "crates/machines/eater-6502",
    "crates/machines/kim1",
    "crates/machines/pet",
    "crates/chips/acia-6551",
    "crates/chips/pia-6520",
    "crates/chips/via-6522",
    "crates/other/z80",
    "crates/tools/chip8-romtest",
    "crates/tools/chip8-term",
    "crates/tools/kim1-term",
    "crates/tools/serial-term",
    "crates/tools/apple1-term",
    "crates/tools/apple1-window",
    "crates/tools/pet-term",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
