[package]
name = "serial-term"
version = "0.1.0"
edition = "2021"
description = "Universal serial terminal for any SerialMachine (6502 etc.)"

[[bin]]
name = "serial-term"
path = "src/main.rs"

[dependencies]
cpu-machine = { path = "../../cpu/machine" }
eater-6502 = { path = "../../machines/eater-6502" }
crossterm = "0.28"
atty = "0.2"
libc = "0.2"
